--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -89,15 +89,16 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
+    driverClassName: 'oracle.jdbc.OracleDriver'
+    logSql: true
+    username: ''
     password: ''
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: ''
     test:
         dataSource:
             dbCreate: update
