--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -89,15 +89,15 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+    driverClassName: 'oracle.jdbc.OracleDriver'
+    username: 'ALUNO1'
+    password: 'ALUNO1'
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:oracle:thin:@insoft-lnx4.insoft.local:1521:DESENV01
     test:
         dataSource:
             dbCreate: update
